refactor(Cars): 자동차 목록 원본의 불변을 위한 코드 수정